--- a/index.html
+++ b/index.html
@@ -1,34 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Blockchain Learning Directory</title>
-    <meta name="description" content="Discover curated blockchain learning resources including courses, tutorials, books, frameworks, and communities for developers at all levels. Free and open to the public.">
-    <meta name="keywords" content="blockchain, ethereum, bitcoin, smart contracts, web3, DeFi, NFT, cryptocurrency, blockchain tutorial, blockchain course, learn blockchain">
+		<title>Blockchain Learning Hub | Build With Angel</title>
+		<link rel="canonical" href="https://buildwithangel.com/blockchain-learning-hub" />
+		<meta
+			name="description"
+			content="Blockchain Learning Hub de Build With Angel: recursos curados, guías técnicas, frameworks y comunidades para aprender Web3 y desarrollo blockchain desde cero hasta avanzado."
+		/>
+		<meta
+			name="keywords"
+			content="build with angel, blockchain learning hub, recursos blockchain, cursos web3, smart contracts, solidity, comunidades blockchain, guías web3, aprendizaje blockchain"
+		/>
+		<meta name="author" content="Build With Angel" />
+		<meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+		<meta name="theme-color" content="#2563eb" />
 
-    <meta property="og:title" content="Blockchain Learning Hub - Free Resources for Developers">
-    <meta property="og:description" content="Discover curated blockchain learning resources including courses, tutorials, books, frameworks, and communities for developers at all levels.">
-    <meta property="og:type" content="website">
+		<meta property="og:title" content="Blockchain Learning Hub | Recursos Blockchain por Build With Angel" />
+		<meta
+			property="og:description"
+			content="Explora colecciones curadas de cursos, tutoriales y herramientas para dominar Web3 y el desarrollo blockchain dentro del ecosistema de Build With Angel."
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Build With Angel" />
+		<meta property="og:url" content="https://buildwithangel.com/blockchain-learning-hub" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:locale:alternate" content="es_ES" />
+		<meta property="og:image" content="https://buildwithangel.com/blockchain-learning-hub/Logo-11.png" />
+		<meta property="og:image:alt" content="Build With Angel - Blockchain Learning Hub" />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Blockchain Learning Hub - Free Resources for Developers">
-    <meta name="twitter:description" content="Discover curated blockchain learning resources including courses, tutorials, books, frameworks, and communities for developers at all levels.">
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Blockchain Learning Hub | Recursos Blockchain por Build With Angel" />
+		<meta
+			name="twitter:description"
+			content="Accede a la guía definitiva de aprendizaje blockchain con contenido curado por Build With Angel."
+		/>
+		<meta name="twitter:image" content="https://buildwithangel.com/blockchain-learning-hub/Logo-11.png" />
+		<meta name="twitter:image:alt" content="Build With Angel - Blockchain Learning Hub" />
+		<meta name="twitter:url" content="https://buildwithangel.com/blockchain-learning-hub" />
 
-    <meta name="author" content="Blockchain Learning Hub">
-    <meta name="theme-color" content="#2563eb">
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebPage",
+				"@id": "https://buildwithangel.com/blockchain-learning-hub#webpage",
+				"url": "https://buildwithangel.com/blockchain-learning-hub",
+				"name": "Blockchain Learning Hub | Build With Angel",
+				"inLanguage": ["en", "es"],
+				"description": "Blockchain Learning Hub de Build With Angel: recursos curados, guías técnicas y comunidades para aprender Web3 y desarrollo blockchain.",
+				"isPartOf": {
+					"@type": "WebSite",
+					"name": "Build With Angel",
+					"url": "https://buildwithangel.com/"
+				},
+				"publisher": {
+					"@type": "Organization",
+					"name": "Build With Angel",
+					"url": "https://buildwithangel.com/",
+					"logo": {
+						"@type": "ImageObject",
+						"url": "https://buildwithangel.com/blockchain-learning-hub/Logo-11.png"
+					}
+				}
+			}
+		</script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
